# rag-study

./: .env.sample  README.md  pyproject.toml
src/: index.py  lcel.py
src/prompt/: load_prompt.py  partial_variables.py
src/prompt/prompts/: capital.yaml
